@@ -3,6 +3,12 @@
 	  does not have it.
 	- Fix unbound for openssl in FIPS mode, it uses the digests with
 	  the EVP call contexts.
+	- Fix that with harden-below-nxdomain and qname minisation enabled
+	  some iterator states for nonresponsive domains can get into a
+	  state where they waited for an empty list.
+	- Stop UDP to TCP failover after timeouts that causes the ping count
+	  to be reset by the TCP time measurement (that exists for TLS),
+	  because that causes the UDP part to not be measured as timeout.
 
 13 September 2018: Wouter
 	- Fix seed for random backup code to use explicit zero when wiped.
